samples/_failures_safe/1761476032_bdc333_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_367516a8.c: In function ‘main’:
./samples/SAFE/__tmp_367516a8.c:173:5: error: expected identifier or ‘(’ at end of input
  173 |     int
      |     ^~~
./samples/SAFE/__tmp_367516a8.c:173:5: error: expected declaration or statement at end of input
